Fixed overlapping

--- a/style.css
+++ b/style.css
@@ -121,6 +121,9 @@ a:hover {
 }
 
 #about {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: khaki;
     background-image: linear-gradient(rgba(248, 248, 248, 0.7), rgba(171, 171, 169, 0.7)), url(./beach.jpg);
     /* background-image: url(./moment-player.jpeg);
@@ -147,20 +150,28 @@ a:hover {
 }
 
 #about h3 {
+
     text-align: center;
-    font-weight: 1200;
+    font-weight: 1000;
     font-size: 28px;
+    height: auto;
+
+
+}
+
+.introText .p {
+    color: red;
 }
 
 #about p {
-    font-size: 26px;
+    font-size: 23px;
 
 
 }
 
 #about .pics p {
     font-size: 18px;
-    margin-top: 10px;
+
 
 }
 
@@ -182,6 +193,7 @@ a:hover {
 }
 
 
+
 .pics {
 
     display: flex;
@@ -194,33 +206,14 @@ a:hover {
 
 }
 
-.pic1 {
-    height: 25vh;
+.pic1 {}
 
-    margin-bottom: 2vh;
-    margin-left: 2vh;
-    margin-right: 2vh;
-}
+.pic2 {}
 
-.pic2 {
-    height: 25vh;
-
-    margin-bottom: 2vh;
-    margin-left: 2vh;
-    margin-right: 2vh;
-}
-
-.pic3 {
-    height: 25vh;
-    width: fit-content;
-
-    margin-bottom: 2vh;
-    margin-left: 2vh;
-    margin-right: 2vh;
-}
+.pic3 {}
 
 .Pigs {
-    width: 35vw;
+    width: 2vw;
     height: 45vh;
 
 
@@ -237,11 +230,9 @@ a:hover {
 
 
 
-    margin-bottom: 4vh;
+    margin-bottom: 1vh;
     margin-left: 2vh;
     margin-right: 2vh;
-
-
 
 
 }
@@ -249,7 +240,7 @@ a:hover {
 .Child2 {
     background-color: rgba(204, 211, 219, 0.2);
     height: 25vh;
-    margin-bottom: 2vh;
+    margin-bottom: 1vh;
     margin-left: 2vh;
     margin-right: 2vh;
     border-radius: 10px;
@@ -258,7 +249,7 @@ a:hover {
 .Child3 {
     background-color: rgba(204, 211, 219, 0.2);
     height: 25vh;
-    margin-bottom: 2vh;
+    margin-bottom: 1vh;
     margin-left: 2vh;
     margin-right: 2vh;
     border-radius: 10px;
